update .env example

--- a/instashare/.env.example
+++ b/instashare/.env.example
@@ -2,3 +2,12 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 SESSION_SECRET_KEY=your-secret-key-for-sessions
 
+# IPFS configuration
+# Required if using https://pinata.cloud (IPFS pinning service)
+PINATA_API_KEY=your_pinata_api_key_here
+PINATA_API_SECRET=your_pinata_api_secret_here
+
+# Public IPFS gateway URL for accessing uploaded files
+# Recommended to use your own dedicated IPFS gateway to avoid congestion / rate limiting
+# Example: "https://ipfs.my-dao.org/ipfs" (Note: won't work for third-party files)
+IPFS_GATEWAY_URL=https://gateway.pinata.cloud/ipfs
