update .env example

--- a/instashare/.env.example
+++ b/instashare/.env.example
@@ -11,3 +11,6 @@ PINATA_API_SECRET=your_pinata_api_secret_here
 # Recommended to use your own dedicated IPFS gateway to avoid congestion / rate limiting
 # Example: "https://ipfs.my-dao.org/ipfs" (Note: won't work for third-party files)
 IPFS_GATEWAY_URL=https://gateway.pinata.cloud/ipfs
+
+REDIS_URL=redis://localhost:6379
+OUTPUT_DIR=./output
