rename app to api prepare to create test

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,14 @@ starlette
 python-dotenv
 itsdangerous
 requests
+
+# Testing dependencies
+pytest
+pytest-asyncio
+pytest-mock
+pytest-cov
+pytest-xdist
+httpx
+fakeredis
+factory-boy
+freezegun
