--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   worker:
     build: .
-    command: celery -A api.celery_app worker --loglevel=info
+    command: celery -A api.services.celery_app worker --loglevel=info
     volumes:
       - .:/home/appuser
     env_file:
@@ -25,7 +25,7 @@ services:
 
   beat:
     build: .
-    command: celery -A api.celery_app beat --loglevel=info
+    command: celery -A api.services.celery_app beat --loglevel=info
     volumes:
       - .:/home/appuser
     env_file:
