--- a/ui/netlify.toml
+++ b/ui/netlify.toml
@@ -1,3 +1,18 @@
 [build]
   publish = ".next"
   command = "npm run build"
+
+[build.environment]
+  NODE_VERSION = "22.14.0"
+  NPM_VERSION = "11.4.2"
+
+#[[redirects]]
+#  from = "/*"
+#  to = "/index.html"
+#  status = 200
+
+[context.production.environment]
+  NEXT_PUBLIC_API_URL = "https://web-production-23301.up.railway.app"
+
+[context.deploy-preview.environment]
+  NEXT_PUBLIC_API_URL = "https://web-production-23301.up.railway.app"
