--- a/ui/netlify.toml
+++ b/ui/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = ".next"
-  command = "npm run build && npm run export"
+  command = "npm run build"
 
 [build.environment]
   NODE_VERSION = "22.14.0"
