--- a/ui/netlify.toml
+++ b/ui/netlify.toml
@@ -3,16 +3,16 @@
   command = "npm run build"
 
 [build.environment]
-  NODE_VERSION = "22.14.0"
+  NODE_VERSION = "20.14.0"
   NPM_VERSION = "11.4.2"
-
-#[[redirects]]
-#  from = "/*"
-#  to = "/index.html"
-#  status = 200
 
 [context.production.environment]
   NEXT_PUBLIC_API_URL = "https://web-production-23301.up.railway.app"
 
 [context.deploy-preview.environment]
   NEXT_PUBLIC_API_URL = "https://web-production-23301.up.railway.app"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200 
