--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@netlify/blobs": "^8.2.0",
+        "@netlify/next": "^1.4.9",
         "blobshape": "^1.0.0",
         "bright": "^0.8.5",
         "markdown-to-jsx": "^7.4.5",
