--- a/ui/netlify.toml
+++ b/ui/netlify.toml
@@ -8,7 +8,7 @@
 [functions]
 directory = ".netlify/functions"
 
-[plugins]
+[[plugins]]
 package = "@netlify/next"
 
 [context.production.environment]
